Bug #43752  ndb: spurious event operation ref count mismatch during node restart.  Rewrite refcounting code to use gci numbers to determine when an event operation object can be dropped